--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
     font-family: "Jost", sans-serif;
     list-style: none;
     text-decoration: none;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 h4 {
